--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "untek-framework-plugin/messenger-kafka-transport",
   "type": "extension",
   "license": "MIT",
+  "homepage": "https://untek-lab.github.io",
   "authors": [
     {
       "name": "Untek Developer",
